--- a/views/status.haml
+++ b/views/status.haml
@@ -14,12 +14,12 @@
     #overallstatus
       Initiated
    
-    %h3 Overall setup details
-    #setupdetails
+    %h3 Setup status
+    #setupstatus
       No details yet
 
     %h3 Build status
-    #builddetails
+    #buildstatus
       No details yet
     
     
