--- a/views/form.haml
+++ b/views/form.haml
@@ -6,6 +6,7 @@
   %body
     %h2 Deployment details for #{app} (#{desc})
     For more information please visit <a href="#{website}">#{website}</a>
+    %p The application will be deployed using the source at #{source_url}
     %form(name='input' action='/deploy' method="get")
       %h3 The following configuration variables will be set
       %p
@@ -16,5 +17,7 @@
          
       %h3 The following addons will be added to your application
       - adds.each do |addon_name|
-        %p #{addon_name}             
+        %p #{addon_name} 
+        
+        %input(type='hidden' name='source_url' value='#{source_url}')            
         %input(type='submit' value='Lets go')
