added refresh message

--- a/views/status.haml
+++ b/views/status.haml
@@ -10,7 +10,7 @@
     
   %body
     %h2 Deployment status for #{appname}
-    %img#spinner(src="spinner.gif")
+    This page refreshes every 5 seconds
     #overallstatus
       Initiated
    
