added logout to test expired oauth tokens

--- a/views/form.haml
+++ b/views/form.haml
@@ -20,3 +20,5 @@
         %p #{addon_name} 
                   
       %input(type='submit' value='Lets go')
+      
+    %p <a href="/logout">Log out</a>
