better way to clear the session oauth token

--- a/views/form.haml
+++ b/views/form.haml
@@ -21,4 +21,4 @@
                   
       %input(type='submit' value='Lets go')
       
-    %p <a href="/logout">Log out</a>
+    %p I don't want to do this, <a href="/logout">Log me out</a>
